# vmware-fusion-mcp-server

./: .dockerignore  Dockerfile  Makefile  README.md  manifest.json  pyproject.toml
tests/: test_server.py  test_vmware_client.py
vmware_fusion_mcp/: server.py  vmware_client.py
