[project]
name = "vmware-fusion-mcp-server"
version = "0.1.0"
description = "A FastMCP server for managing VMware Fusion VMs via REST API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0"
]

[project.scripts]
vmware-fusion-mcp = "vmware_fusion_mcp.server:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vmware_fusion_mcp"]

[tool.black]
line-length = 79
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
